...
            style: .default) { [weak self] _ in
                guard let self = self else {return}
                self.presenter.restartGame()
            }
        
        alert.addAction(action)
        alert.view.accessibilityIdentifier = "My_alert"
        self.present(alert, animated: true)
    }
    
    func showLoadingIndicator() {
        activityIndicator.isHidden = false
        activityIndicator.color = .red
...
